<resources>
    <string name="app_name">Giffy tasks</string>
    <string name="loding">Cargando…</string>
    <string name="mail">CORREO</string>
    <string name="password">CONTRASEÑA</string>
    <string name="password_confirm">CONFIRMAR CONTRASEÑA</string>
    <string name="name_last_name">NOMBRE Y APELLIDO</string>
    <string name="age">EDAD</string>
    <string name="gender">SEXO</string>
    <string name="country">PAÍS DE ORIGEN</string>
    <string name="language">IDIOMA</string>
    <string name="phone">TELÉFONO/CELULAR</string>
    <string name="address">DOMICILIO</string>
    <string name="zip_code">CÓDIGO POSTAL</string>
    <string name="next">SIGUIENTE</string>
    <string name="yes">SI</string>
    <string name="not_now">AHORA NO</string>
    <string name="next_1">SIGUIENTE 1/4</string>
    <string name="next_2">SIGUIENTE 2/4</string>
    <string name="next_3">SIGUIENTE 3/4</string>
    <string name="next_4">FINALIZAR 4/4</string>
    <string name="filter_btn">FILTRAR RESULTADOS</string>
    <string name="finish">FINALIZAR</string>
    <string name="cancel">CANCELAR</string>
    <string name="save">GUARDAR</string>
    <string name="delete">ELIMINAR</string>
    <string name="save_changes">GUARDAR CAMBIOS</string>
    <string name="sing_in">INGRESAR</string>
    <string name="gift_recommendation">El regalo que tú buscas es…</string>
    <string name="log_off">DESCONECTARSE</string>
    <string name="agree">ACEPTAR</string>
    <string name="add_friend">AGREGAR A MI LISTA DE AMIGOS</string>
    <string name="send">SOLICITUD DE AMISTAD ENVIADA</string>
    <string name="add_wishlist">WISHLIST</string>
    <string name="add_list">LISTAS</string>
    <string name="example_list1">Ver más tarde</string>
    <string name="example_list2">Navidad 2022</string>
    <string name="example_list3">Ofertas</string>
    <string name="invitation">INVITAR A LA APP</string>
    <string name="send_quiz">ENVIAR QUIZ</string>
    <string name="answer_quiz">HACER QUIZ</string>
    <string name="back">VOLVER</string>
    <string name="write">Escribe aquí…</string>
    <string name="search">Buscar…</string>
    <string name="upload">Subir archivo…</string>
    <string name="question_start">¿QUIERES HACER EL QUIZ PARA TU REGALO PERFECTO?</string>
    <string name="quizz_title">QUIZ DEL REGALO PERFECTO</string>
    <string name="quizz_desc">Toda la información que proporcionas está protegida, únicamente tus amigos podrán verla.</string>
    <string name="question1">1. Selecciona tu hobbie.</string>
    <string name="music">MÚSICA</string>
    <string name="drawing">DIBUJAR</string>
    <string name="reading">LEER</string>
    <string name="sports">DEPORTE</string>
    <string name="cooking">COCINAR</string>
    <string name="movies">PELICULAS</string>
    <string name="gardening">JARDINERIA</string>
    <string name="dancing">BAILAR</string>
    <string name="other">OTRO</string>
    <string name="question2">2. ¿Cuál es tu comida favorita?</string>
    <string name="mexican">MEXICANA</string>
    <string name="italian">ITALIANA</string>
    <string name="chinese">CHINA</string>
    <string name="spanish">ESPAÑOLA</string>
    <string name="swiss">SUIZA</string>
    <string name="fast_food">RÁPIDA</string>
    <string name="question3">3. ¿Qué tipo de música escuchas?</string>
    <string name="none">NINGUNA</string>
    <string name="rap">RAP</string>
    <string name="pop">POP</string>
    <string name="reggeaton">REGGEATON</string>
    <string name="kpop">K-POP</string>
    <string name="rock">ROCK</string>
    <string name="question4">4. ¿Cuáles son tus tallas de ropa?</string>
    <string name="tshirt">CAMISETA</string>
    <string name="pants">PANTALÓN</string>
    <string name="shoes">ZAPATOS</string>
    <string name="question5">5. ¿Eres de flores o de chocolate?</string>
    <string name="question5_answer1">Prefiero que me regalen flores</string>
    <string name="question5_answer2">Prefiero que me regalen chocolate</string>
    <string name="question6">6. Elige el estampado que más te guste.</string>
    <string name="question7">7. Selecciona tu color favorito.</string>
    <string name="red">ROJO</string>
    <string name="orange">NARANJA</string>
    <string name="yellow">AMARILLO</string>
    <string name="green">VERDE</string>
    <string name="blue">AZUL</string>
    <string name="purple">MORADO</string>
    <string name="brown">CAFÉ</string>
    <string name="black">NEGRO</string>
    <string name="white">BLANCO</string>
    <string name="question8">8. Selecciona tu sabor de dulces favoritos.</string>
    <string name="chocolate">CHOCOLATE</string>
    <string name="gummies">GOMITAS</string>
    <string name="gum">CHICLES</string>
    <string name="caramels">CARAMELOS</string>
    <string name="chile">DE CHILE</string>
    <string name="fruits">DE FRUTAS</string>
    <string name="typical">TÍPICOS</string>
    <string name="handmade">ARTESANALES</string>
    <string name="filled">RELLENOS</string>
    <string name="question9">9. ¿Qué modelo de celular tienes?</string>
    <string name="question10">10. ¿Qué género de películas te gustan?</string>
    <string name="action">ACCIÓN</string>
    <string name="FANTASIA">FANTASÍA</string>
    <string name="scifi">SCI-FI</string>
    <string name="comedy">COMEDIA</string>
    <string name="romance">ROMANCE</string>
    <string name="animated">ANIMADAS</string>
    <string name="question11">11. ¿Prefieres un regalo o dinero?</string>
    <string name="gift">REGALO</string>
    <string name="money">DINERO</string>
    <string name="question12">12. ¿Qué te gusta de la cultura popular?</string>
    <string name="star_wars">STAR WARS</string>
    <string name="marvel">MARVEL</string>
    <string name="dc">DC</string>
    <string name="harry_potter">HARRY POTTER</string>
    <string name="nintendo">NINTENDO</string>
    <string name="disney">DISNEY</string>
    <string name="wwe">WWE</string>
    <string name="simpson">LOS SIMPSON</string>
    <string name="silent_hill">SILENT HILL</string>
    <string name="question13">13. Elige lo que NO te gustaría de regalo.</string>
    <string name="clothing">ROPA</string>
    <string name="food">COMIDA</string>
    <string name="toys">JUGUETES</string>
    <string name="question14">14. ¿Algo que agregar?</string>
    <string name="question15">15. ¿Qué te gustaría que te regalaran?</string>
    <string name="plush_toys">PELUCHES</string>
    <string name="accessories">ACCESORIOS</string>
    <string name="perfum">PERFUME/LOCIÓN</string>
    <string name="tech">TECNOLOGÍA</string>
    <string name="stationery">PAPELERÍA</string>
    <string name="videogames">VIDEOJUEGOS</string>
    <string name="collectibles">COLECCIONABLES</string>
    <string name="makeup">MAQUILLAJE</string>
    <string name="games">JUEGOS</string>
    <string name="filter">FILTRAR POR:</string>
    <string name="relevance">Más relevantes</string>
    <string name="low_price">Menor precio</string>
    <string name="high_price">Mayor precio</string>
    <string name="interest_free">Meses sin intereses</string>
    <string name="free_shipping">Envió gratis</string>
    <string name="price">Precio</string>
    <string name="discount">Descuentos/Promociones</string>
    <string name="filters">FILTROS</string>
    <string name="affiliated">TIENDAS AFILIADAS</string>
    <string name="amazon">AMAZON</string>
    <string name="amazon1">Ver más en Amazon…</string>
    <string name="mercado_libre">MERCADO LIBRE</string>
    <string name="mercado_libre1">Ver más en Mercado Libre…</string>
    <string name="ebay">EBAY</string>
    <string name="ebay1">Ver más en Ebay…</string>
    <string name="walmart">WALMART</string>
    <string name="category1">TECNOLOGÍA</string>
    <string name="category2">BELLEZA</string>
    <string name="category3">DEPORTES</string>
    <string name="category4">CASA</string>
    <string name="roku">ROKU dispo…</string>
    <string name="ink">HP tinta par…</string>
    <string name="camera">Cámara web…</string>
    <string name="battery">Batería para…</string>
    <string name="converter">Convertidor…</string>
    <string name="devices">Dispositivo d…</string>
    <string name="processor">Procesador…</string>
    <string name="monitor">Monitor HP…</string>
    <string name="cable">Cable carga…</string>
    <string name="extension">Extensión d…</string>
    <string name="home">HOME</string>
    <string name="stores">TIENDAS</string>
    <string name="calendar">CALENDARIO</string>
    <string name="notifications">NOTIFICACIONES</string>
    <string name="profile">PERFIL</string>
    <string name="day">SÁBADO 15-ENERO</string>
    <string name="day_desc">Aniversario 17 mamá y papá</string>
    <string name="name_credit_card">NOMBRE DE LA TARJETA</string>
    <string name="number_credit_card">NÚMEROS DE LA TARJETA</string>
    <string name="date_credit_card">FECHA</string>
    <string name="cvv_credit_card">CVV</string>
    <string name="credit_card_desc">Toda la información que proporcionas está protegida.</string>
    <string name="friends_email">CORREO ELECTRONICO DE TU AMIGO</string>
    <string name="passed">¡ENHORABUENA!</string>
    <string name="passed_desc">¡La tarjeta de regalo ya fue enviada! Dile a tu amigo que revise su correo :)</string>
    <string name="recomendations">REGALOS RECOMENDADOS</string>
    <string name="example1">Collar chapa…</string>
    <string name="example2">Acrílico orga…</string>
    <string name="example3">Organizar de…</string>
    <string name="example4">Cosmetiquer…</string>
    <string name="example5">Spray fijador…</string>
    <string name="example6">Polvo para ro…</string>
    <string name="example7">Brochas de m…</string>
    <string name="example8">Perfume de m…</string>
    <string name="example9">Crema de ma…</string>
    <string name="change_password_desc">Se ha enviado una solicitud de cambio de contraseña a tu correo.</string>
    <string name="store1">Balón de futbol…</string>
    <string name="store2">Balón de fút…</string>
    <string name="january">ENERO</string>
    <string name="february">FEBRERO</string>
    <string name="gift_card">GIFT CARDS</string>
    <string name="five_hundred">$500</string>
    <string name="seven_hundred">$700</string>
    <string name="one_thousand">$1000</string>
    <string name="invite_frinds">Invitar amigos</string>
    <string name="send_quizz">Enviar quiz del regalo perfecto</string>
    <string name="group_pic">Foto de portada</string>
    <string name="members">Miembros</string>
    <string name="add_friends">AGREGAR AMIGO</string>
    <string name="upload_pic">¡SUBE UNA FOTO!</string>
    <string name="forgot_password">¿No recuerdas tu usuario o contraseña?</string>
    <string name="registration">¿Aún no tiene cuenta?</string>
    <string name="ad_title">¡ANÚNCIATE CON NOSOTROS!</string>
    <string name="ad_desc">Envíanos un mensaje a través de nuestras redes sociales para que tu negocio pueda anunciarse aquí.</string>
    <string name="home_title">¿A QUIÉN LE VAS A REGALAR HOY?</string>
    <string name="home_send_gift">¿No tiene cuenta?</string>
    <string name="friend1">ALAN EDUARDO TORRES</string>
    <string name="friend2">GISSELLE VALENZUELA</string>
    <string name="friend3">KAMILA FORNÉS LÓPEZ</string>
    <string name="friend4">LILIAN RAMÍRES PAREDES</string>
    <string name="friend5">CRISTINA VILLEGAS</string>
    <string name="friend6">ELIZA APODACA</string>
    <string name="friend7">DANIELLA SÁNCHEZ</string>
    <string name="friend8">SALMA</string>
    <string name="amigos_list">LISTA DE AMIGOS</string>
    <string name="search_friend">Buscar amigos</string>
    <string name="invite">Invitar amigos</string>
    <string name="requests">SOLICITUDES DE AMISTADES</string>
    <string name="mark_as_read">Marcar todo como leído…</string>
    <string name="example_request1">¡SALM quiere ser tu amigo!</string>
    <string name="example_request2">¡ALAN quiere ser tu amigo!</string>
</resources>