<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/rectangle_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_stores"
        android:icon="@drawable/rectangle_tiendas"
        android:title="@string/stores" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/rectangle_calendario"
        android:title="@string/calendar"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/rectangle_notificaciones"
        android:title="@string/notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/rectangle_perfil"
        android:title="@string/profile" />

</menu>